Forward correct defaults for scroll view rubber banding.

Scroll view rubber banding is enabled by default on macOS, and should be
enabled if the NSScrollViewRubberBanding value is unset.

Bug: 748618
Change-Id: I579591c737b4ae67887ba9c14c47ac2ae6521e5a
Reviewed-on: https://chromium-review.googlesource.com/585365
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Greg Kerr <kerrnel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489420}
Former-commit-id: 0f9f36c77159df1e7e64a83ceab11fdca1f743a0